; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/eicon/extr_os_4bri.c_xdiLoadFile.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hardware/eicon/extr_os_4bri.c_xdiLoadFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@diva_xdiLoadFileFile = common dso_local global i32* null, align 8
@diva_xdiLoadFileLength = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xdiLoadFile(i8* %0, i64* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** @diva_xdiLoadFileFile, align 8
  %9 = bitcast i32* %8 to i8*
  store i8* %9, i8** %7, align 8
  %10 = load i64*, i64** %5, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i64, i64* @diva_xdiLoadFileLength, align 8
  %14 = load i64*, i64** %5, align 8
  store i64 %13, i64* %14, align 8
  br label %15

15:                                               ; preds = %12, %3
  store i32* null, i32** @diva_xdiLoadFileFile, align 8
  store i64 0, i64* @diva_xdiLoadFileLength, align 8
  %16 = load i8*, i8** %7, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
